--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-torch==1.10.0
-numpy==1.21.0
-matplotlib==3.4.2
-pillow==8.2.0
-scikit-learn==0.24.2
+torch
+torchvision
+numpy
+matplotlib
+pillow
+scikit-learn
+flask
